<resources>
    <string name="app_name">Salud UTN</string>
    <string name="title_salud_fisica">Cuerpo</string>
    <string name="title_salud_mental">Mente</string>
    <string name="txt_app_name">Mí perfil</string>
    <string name="txt_salud_fisica">Cuerpo</string>
    <string name="txt_salud_mental">Mente</string>
    <string name="txt_datos_personales">Datos Personales</string>
    <string name="txt_alergias">Alergias</string>
    <string name="txt_historial_medico">Historial Medico</string>
    <string name="txt_diario_de_emociones">Diario de Emociones</string>
    <string name="todo">TODO</string>
    <string name="matricula_dp">Matricula:</string>
    <string name="name_dp">Nombres:</string>
    <string name="last_name_dp">Apellidos:</string>
    <string name="contact_dp">Contacto:</string>
    <string name="contact_phone_dp">Telefono:</string>
    <string name="characteristics_dp">Métricas:</string>
    <string name="characteristics_peso_dp">Peso:</string>
    <string name="characteristics_altura_dp">Altura:</string>
    <string name="unit_weight_dp">kg</string>
    <string name="unit_height_dp">cm</string>
    <string name="nss_dp">NSS:</string>
    <string name="hint_matricula_dp">Matricula</string>
    <string name="hint_name_dp">Nombres</string>
    <string name="hint_last_dp">Apellidos</string>
    <string name="hint_contact_name_dp">Nombre contacto</string>
    <string name="hint_contact_phone_dp">Télefono contacto</string>
    <string name="hint_weight_dp">Peso</string>
    <string name="hint_height_dp">Altura</string>
    <string name="hint_nss_dp">Numero de Seguridad Social</string>
    <string name="editor_activity_title_new_datospersonal">Datos Personales</string>
    <string name="editor_activity_title_edit_datospersonal">Edita Datos Personales</string>
    <string name="editor_insert_datospersonal_failed">Error guardando Datos Personales</string>
    <string name="editor_insert_datospersonal_successful">Datos personales guardados</string>
    <string name="editor_update_datospersonal_failed">Error con la actualizacion de Datos personales</string>
    <string name="editor_update_datospersonal_successful">Datos Personales Actualizados</string>
    <string name="unsaved_changes_dialog_msg">Descartar tus cambios y dejar de editar?</string>
    <string name="discard">Descartar</string>
    <string name="keep_editing">Seguir Editando</string>
    <string name="delete_dialog_msg">Eliminar este registro?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="editor_delete_datospersonal_failed">Error al eliminar datos personales</string>
    <string name="editor_delete_datospersonal_successful">Datos Personales Eliminados</string>
    <string name="empty_view_title_text">Nada registrado aun...</string>
    <string name="empty_view_subtitle_text">Empieza por ingresar tu información</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Borrar datos personales</string>
    <string name="action_save">Saves</string>
    <string name="action_delete">Eliminar</string>
    <string name="unknown_feel">Sentimiento no descrito</string>
    <string name="unknown_thought">Pensamiento no descrito</string>
    <string name="category_date">Fecha:</string>
    <string name="hint_date">Dia/Mes/Año</string>
    <string name="category_feel">Sentimiento:</string>
    <string name="hint_feel">Coloca aqui que sientes</string>
    <string name="category_tought">Pensamiento:</string>
    <string name="hint_tought">Coloca aqui que piensas</string>
    <string name="category_emotion">Emocion:</string>
    <string name="editor_delete_diarioemocion_failed">Error al borrar el registro de emocion</string>
    <string name="editor_delete_diarioemocion_successful">Registro de emocion eliminado</string>
    <string name="editor_activity_title_new_diarioemociones">Añade una emoción</string>
    <string name="editor_activity_title_edit_diarioemociones">Edita una emocion</string>
    <string name="editor_insert_diarioemocion_failed">Error al guardar el registro de emocion</string>
    <string name="editor_insert_diarioemocion_successful">Registro de emocion guardado</string>
    <string name="editor_update_diarioemocion_failed">Error al actualizar el registro de emocion</string>
    <string name="editor_update_diarioemocion_successful">Registro de emocion actualizado</string>
    <string name="action_delete_all_diarioemociones">Borrar datos Diario de emociones</string>
    <string name="emotion_unknow">Elige tu emocion</string>
    <string name="emotion_apatia">Apatía</string>
    <string name="emotion_admiracion">Admiración</string>
    <string name="emotion_alegria">Alegría</string>
    <string name="emotion_amor">Amor</string>
    <string name="emotion_asco">Asco</string>
    <string name="emotion_culpabilidad">Culpabilidad</string>
    <string name="emotion_desesperacion">Desesperación</string>
    <string name="emotion_diversion">Diversión</string>
    <string name="emotion_esperanza">Esperanza</string>
    <string name="emotion_gratitud">Gratitud</string>
    <string name="emotion_indiferencia">Indiferencia</string>
    <string name="emotion_inspiracion">Inspiración</string>
    <string name="emotion_interes">Interés</string>
    <string name="emotion_ira">Ira</string>
    <string name="emotion_miedo">Miedo</string>
    <string name="emotion_orgullo">Orgullo</string>
    <string name="emotion_serenidad">Serenidad</string>
    <string name="emotion_soledad">Soledad</string>
    <string name="emotion_tristeza">Tristeza</string>
    <string name="alergia_comentary_unknown">Sin comentario</string>
    <string name="category_alergy">Alergia:</string>
    <string name="category_alergy_type">Tipo alergia:</string>
    <string name="category_comment_alergy">Comentario:</string>
    <string name="hint_comment">Haz un comentario de la alergia</string>
    <string name="alergia_unknown">Eliga una alergia</string>
    <string name="alergia_huevo">Huevo</string>
    <string name="alergia_pescado">Pescado</string>
    <string name="alergia_lacteos">Lacteos</string>
    <string name="alergia_manies">Manies (Cacahuates)</string>
    <string name="alergia_mariscos">Mariscos</string>
    <string name="alergia_soya">Soya</string>
    <string name="alergia_nueces">Nueces</string>
    <string name="alergia_trigo">Trigo</string>
    <string name="alergia_anticonvulsivos">Anticonvulsivos</string>
    <string name="alergia_insulina">Insulina</string>
    <string name="alergia_yodo">Yodo</string>
    <string name="alergia_penicilina">Penicilina</string>
    <string name="alergia_sulfamidas">Sulfamidas</string>
    <string name="editor_activity_title_new_alergias">Añade una alergia</string>
    <string name="editor_activity_title_edit_alergias">Edita una alergia</string>
    <string name="editor_insert_alergias_failed">Error al guardar el registro de alergia</string>
    <string name="editor_insert_alergias_successful">Registro de alergia guardado</string>
    <string name="editor_update_alergia_failed">Error al actualizar el registro de alergia</string>
    <string name="editor_update_alergia_successful">Registro de alergia actualizado</string>
    <string name="editor_delete_alergias_failed">Error al borrar el registro de alergia</string>
    <string name="editor_delete_alergias_successful">Registro de alergia eliminado</string>
    <string name="speciality_unknown">Elige una especialidad</string>
    <string name="speciality_anestesiologia">Anestesiología </string>
    <string name="speciality_angiologia">Angiología cirujano vascular</string>
    <string name="speciality_cardiologia">Cardiologia</string>
    <string name="speciality_cardiologia_intervensionista">Cardiologia Intervensionista</string>
    <string name="speciality_cirugia">Cirugía</string>
    <string name="speciality_cirugia_oncologica">Cirugía Oncológica</string>
    <string name="speciality_cirugia_plastica">Cirugía plástica</string>
    <string name="speciality_dermatologia">Dermatología</string>
    <string name="speciality_endoscopia">Endoscopía</string>
    <string name="speciality_gastroenterlogia">Gastroenterología</string>
    <string name="speciality_ginecologia_obstreticia">Ginecología y Obstetricia</string>
    <string name="speciality_hematologia">Hematología</string>
    <string name="speciality_infectologia">Infectología</string>
    <string name="speciality_medicina_rehabilitacion">Medicina de Rehabilitación</string>
    <string name="speciality_medicina_interna">Medicina Interna</string>
    <string name="speciality_nefrologia">Nefrología</string>
    <string name="speciality_neumologia">Neumología</string>
    <string name="speciality_neurologia">Neurología</string>
    <string name="speciality_oftalmologia">Oftalmología</string>
    <string name="speciality_oncologia_medica">Oncología Médica</string>
    <string name="speciality_oncologia_pediatrica">Oncología pediátrica</string>
    <string name="speciality_ortopedia">Ortopedia</string>
    <string name="speciality_otorrinolaringologia">Otorrinolaringología</string>
    <string name="speciality_patologia_clinica">Patología Clínica</string>
    <string name="speciality_pediatria">Pediatría</string>
    <string name="speciality_psiquiatria">Psiquiatría</string>
    <string name="speciality_radiologia_imagen">Radiología e imagen</string>
    <string name="speciality_radio_oncologia">Radio-oncología</string>
    <string name="speciality_urologia">Urología</string>
    <string name="editor_activity_title_new_historial_medico">Añade un evento Medico</string>
    <string name="editor_activity_title_edit_historial_medico">Edita un evento Medico</string>
    <string name="editor_insert_historialmedico_failed">Error guardando registro médico</string>
    <string name="editor_insert_historiamedico_successful">Registro Médico Guardado</string>
    <string name="editor_update_historialmedico_failed">Error con la actualizacion del evento</string>
    <string name="editor_update_historialmedico_successful">Evento actualizado</string>
    <string name="editor_delete_historialmedico_failed">Error al eliminar registro médico</string>
    <string name="editor_delete_historialmedico_successful">Registro médico eliminado</string>
    <string name="editor_delete_historialmedico_diagnostic">Diagnostico: </string>
    <string name="editor_delete_historialmedico_price">Precio: </string>
    <string name="editor_delete_historialmedico_price_mxn">MXN</string>
    <string name="editor_delete_historialmedico_doctor_name">Doctor: </string>
    <string name="editor_delete_historialmedico_doctor_speciality">Especialidad: </string>
</resources>