<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorDatosPersonales">

    <!-- Matricula category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/matricula_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Matricula field -->
            <EditText
                android:id="@+id/edit_matricula_dp"
                android:hint="@string/hint_matricula_dp"
                android:inputType="number"
                android:maxLength="10"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Nombres category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/name_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name_dp"
                android:hint="@string/hint_name_dp"
                android:inputType="textCapWords"
                android:maxLength="20"
                style="@style/EditorFieldStyle"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Apellidos category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/last_name_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Last name field -->
            <EditText
                android:id="@+id/edit_last_name_db"
                android:hint="@string/hint_last_dp"
                android:inputType="textCapWords"
                android:maxLength="25"
                style="@style/EditorFieldStyle"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Contacto category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/contact_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_contact_name_dp"
                android:hint="@string/hint_contact_name_dp"
                android:inputType="textCapWords"
                android:maxLength="50"
                style="@style/EditorFieldStyle"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

            <!-- Phone contact field -->
            <EditText
                android:id="@+id/edit_contact_phone_dp"
                android:hint="@string/hint_contact_phone_dp"
                android:inputType="number"
                android:maxLength="10"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Peso y Altura category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/characteristics_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_weight_db"
                android:hint="@string/hint_weight_dp"
                android:inputType="number"
                android:maxLength="3"
                style="@style/EditorFieldStyle" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_weight_dp"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- height field -->
            <EditText
                android:id="@+id/edit_height_db"
                android:hint="@string/hint_height_dp"
                android:inputType="number"
                android:maxLength="3"
                style="@style/EditorFieldStyle" />

            <!-- Units for height (kg) -->
            <TextView
                android:id="@+id/label_height_units"
                android:text="@string/unit_height_dp"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- NSS category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/nss_dp"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Matricula field -->
            <EditText
                android:id="@+id/edit_nss_dp"
                android:hint="@string/hint_nss_dp"
                android:inputType="number"
                android:maxLength="11"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


