<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Nombres category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/matricula_dp"
            style="@style/CategoryStyle" />

        <!-- TV -->
        <TextView
            android:id="@+id/matricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <!-- Nombres category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/name_dp"
            style="@style/CategoryStyle" />
        <!-- TV -->
        <TextView
            android:id="@+id/nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>


    <!-- Apellidos category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/last_name_dp"
            style="@style/CategoryStyle" />

        <!-- TV -->
        <TextView
            android:id="@+id/apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <!-- Contacto category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/contact_dp"
            style="@style/CategoryStyle" />

        <!-- TV -->
        <TextView
            android:id="@+id/contactonombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <!-- Contacto category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/contact_phone_dp"
            style="@style/CategoryStyle" />

        <!-- TV -->
        <TextView
            android:id="@+id/contactotelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <!-- Peso category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/characteristics_peso_dp"
            style="@style/CategoryStyle" />

        <!-- Weight field -->
        <TextView
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <!-- Units for weight (kg) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:id="@+id/label_weight_units"
            android:text="@string/unit_weight_dp"
            style="@style/EditorUnitsStyle"/>
    </LinearLayout>

    <!-- Altura category -->
    <LinearLayout
        android:id="@+id/container_measurement_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/characteristics_altura_dp"
            style="@style/CategoryStyle" />

        <!-- height field -->
        <TextView
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <!-- Units for height (cm) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:id="@+id/label_height_units"
            android:text="@string/unit_height_dp"
            style="@style/EditorUnitsStyle"/>
    </LinearLayout>

    <!-- NSS category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Icon -->
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="80dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_school_24"/>

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/nss_dp"
            style="@style/CategoryStyle" />

        <!-- TV -->
        <TextView
            android:id="@+id/nss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>


</LinearLayout>